# llvm-ir-graph-embedding

./: .gitignore  README.md  main.ipynb
data_pipeline/: compile_and_extract.py  download_poj104.py
docker/: Dockerfile  build_image.ps1  run_container.ps1
llvm_pass/: CMakeLists.txt  build.sh
llvm_pass/src/: GraphExtractor.cpp
ml_core/: inference.py  requirements.txt  train.py  visualize.py
ml_core/conf/: config.yaml
ml_core/data/: loader.py  toon_parser.py
ml_core/models/: gnn.py
ml_core/utils/: encoder.py
proto/: graph.proto
